--- a/src/AppBundle/Resources/views/Camas/index.html.twig
+++ b/src/AppBundle/Resources/views/Camas/index.html.twig
@@ -9,8 +9,8 @@
 </div>
 {% endfor %}
 <div class="white-box">
+	<h1 class="font-bold ml-5">Camas Asignadas</h1>
 	<div class="panel-body">
-		<h3>Camas Asignadas</h3>
 		<table class="myTable">
 			<thead>
 				<tr>
