--- a/src/AppBundle/Resources/views/Personas/edit.html.twig
+++ b/src/AppBundle/Resources/views/Personas/edit.html.twig
@@ -6,48 +6,12 @@
 {% block body %}
 
 <div class="col-md-4 col-md-offset-4">
-	<a href="/{{info}}/edit">Atras</a>
 	<div class="white-box">
-		<div class="panel-body">
-			{{form_start(form)}}
-			{{form_widget(form)}}
-			{{form_end(form)}}
-			<button class="btn btn-warning">Guardar</button>
-			<hr>
-			{% if app.user.rola == 'ADMIN' %}
-    
-				<h4>Servicios</h4>
-				<select id="menu" class="form-control form-control-sm">
-				  <option value="">--Servicio--</option>
-				  <option value="1">Lavanderia</option>
-				  <option value="2">Tienda</option>
-				  <option value="3">Materia Roto</option>
-				</select>
-				<select id="servicio" class="form-control form-control-sm">
-				</select>
-				<br>
-				<a class="btn btn-info" id="vamonos" disabled="true">Agregar</a>
-				<hr>
-            	<table class="myTabla">
-				<thead>
-					<tr>
-						<th>Gasto</th>
-						<th>Costo</th>
-					</tr>
-				</thead>
-				<tbody id="table">
-					{% for servicio in servicios %}
-					<tr>
-						<td>{{servicio.servicio.servicio}}</td>
-						<td>{{servicio.servicio.costo}}</td>
-					</tr>
-					{% endfor %}
-				</tbody>
-			</table>          
-            {% endif %}		
-			
-
-		</div>
+		{{form_start(form)}}
+		{{form_widget(form)}} <br>
+		<button class="btn btn-success">Guardar</button> <a class="btn btn-danger" href="/{{info}}/edit">Cancelar</a>
+		{{form_end(form)}}
+		<hr>
 	</div>
 </div>
 {% endblock %}
@@ -56,44 +20,5 @@
 <script>
 $('.myTabla').DataTable();
 </script>
-<script type="text/javascript">
-var btnV = document.getElementById('vamonos');
-$('#menu').change(function(){
-	console.log($(this).val());
-	$.ajax({
-		type:'GET',
-		url : '/servicios/ver/'+ $(this).val(),
-		success: function(data){
-			var d = JSON.parse(data);
-			var infos ;
-			infos = document.getElementById('servicio');
-			infos.innerHTML = '' ;
-			for(let e of d){
-				var op = document.createElement('option');
-				op.appendChild(document.createTextNode(e.servicio));
-				op.value = e.id ;
-				infos.appendChild(op);
-			}
-			btnV.removeAttribute('disabled');
-		}
-	});
-});
 
-btnV.addEventListener('click', event =>{
-	$.ajax({
-		type:'POST',
-		data:JSON.stringify({
-			'idUsuario' : '{{idU}}',
-			'idServicio': $('#servicio').val()
-		}),
-		url: '/serviciosUs/nuevo',
-		success:function(data){
-			console.log(data)
-			$('#table').load(' #table')
-			// window.location.reload();
-		}
-
-	});	
-});
-</script>
 {% endblock %}
