--- a/src/AppBundle/Resources/views/Users/todos.html.twig
+++ b/src/AppBundle/Resources/views/Users/todos.html.twig
@@ -1,40 +1,36 @@
 {% extends "::base.html.twig" %}
-{% block title %}Mi Grupo{% endblock %}
 
 {% block body %}
-{% for flash_message in app.session.flashbag.get('notice') %}
-    <div class="flash-notice">
-        {{ flash_message }}
-    </div>
-{% endfor %}
-
+<div class="col-md-10 col-md-offset-1">
 	<div class="white-box">
-		<div class="panel-body">
-			<table class="myTable">
-				<thead>
-					<tr>
-						<th>Id</th>
-						<th>Nombre</th>
-						<th>Usuario</th>
-						<th>Telefono</th>
-					</tr>
-				</thead>
-				<tbody>
-					{% for user in users %}
-					<tr>
-						<td>{{user.id}}</td>
-						<td>{{user.name}}</td>
-						<td>{{user.username}}</td>
-						<td>{{user.phone}}</td>
-						<td>
-							<a href="{{ path ('users_edit',{'id': user.id})}}" class="btn btn-warning">Ver</a>
-						</td>
-					</tr>
-					{% endfor %}	
-				</tbody>
-			</table>
-		</div>
+		<h1 class="font-bold ml-5">Usuarios</h1>
+		<a class="btn btn-success mb-3" href="{{ path ('users_new')}}">Nuevo</a><br><br>
+		<table class="myTable">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Nombre</th>
+					<th>Usuario</th>
+					<th>Telefono</th>
+					<th>Acciones</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for user in users %}
+				<tr>
+					<td>{{user.id}}</td>
+					<td>{{user.name}}</td>
+					<td>{{user.username}}</td>
+					<td>{{user.phone}}</td>
+					<td>
+						<a href="{{ path ('users_edit',{'id': user.id})}}" class="btn btn-info btn-sm">Ver </a>
+					</td>
+				</tr>
+				{% endfor %}	
+			</tbody>
+		</table>
 	</div>
+</div>
 
 {% endblock %}
 
