--- a/src/AppBundle/Resources/views/Personas/index.html.twig
+++ b/src/AppBundle/Resources/views/Personas/index.html.twig
@@ -31,8 +31,8 @@
 						<td>{{persona.grupo.nombre}}</td>
 						<td>{{persona.fechaNacimiento|date('d-m-Y')}}</td>
 						<td>
-							<a href="{{ path ('personas_edit',{'id': persona.id})}}" class="btn btn-warning">Editar</a>
-							<a href="{{ path ('personas_del',{'id': persona.id})}}" class="btn btn-danger">Eliminar</a>
+							<a href="{{ path ('personas_edit',{'id': persona.id})}}" class="btn btn-sm btn-warning">Editar</a>
+							<a onclick="eliminar({{persona.id}})" class="btn btn-sm btn-danger">Eliminar</a>
 						</td>
 					</tr>
 					{% endfor %}
@@ -40,11 +40,37 @@
 			</table>
 		</div>
 	</div>
+<div class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Eliminar registro</h4>
+      </div>
+      <div class="modal-body">
+        <p>Sguro que desea eliminar este registro ?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      	<a href="" id="ruta" type="button" class="btn btn-danger">Eliminar</a>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 {% endblock %}
 
 {% block javascripts %}
 <script>
 $('.myTable').DataTable();
+
+function eliminar(id){
+	var ruta = `${id}/del`
+	$('#ruta').attr('href',ruta);
+	$('.modal').modal('toggle');
+}
+
+
+;
 </script>
 {% endblock %}
