--- a/src/AppBundle/Resources/views/Servicios/nuevo.html.twig
+++ b/src/AppBundle/Resources/views/Servicios/nuevo.html.twig
@@ -1,34 +1,36 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:Users:index{% endblock %}
-
 {% block body %}
-    <a href="/servicios">Atras</a>
-<h1>Servicios</h1>
+<div class="col-md-8 col-md-offset-2">
+  <div class="white-box">
+    <a class="btn btn-info" href="/servicios">Atras</a>
+    <h1 class="font-bold">Servicios</h1>
     <div class="tab-container">
-        {{form_start(form)}}
-            <div data-repeater-list="">
-                <div data-repeater-item="">
-                    
-                    <div class="form-row">
-                        <div class="form-group col-md-3">
-                            {{form_row(form.tipo)}}
-                            <!--input type="text" class="form-control" id="name" placeholder="Name"-->
-                        </div>
-                        <div class="form-group col-md-3">
-                            {{form_row(form.servicio)}}
-                            <!--input type="text" class="form-control" id="name" placeholder="Name"-->
-                        </div>
-                        <div class="form-group col-md-3">
-                            <!--input type="email" class="form-control" id="email" placeholder="Email"-->
-                            {{form_row(form.costo)}}
-                        </div>
-                    </div>
-                    <hr>
-                </div>
+      {{form_start(form)}}
+      <div data-repeater-list="">
+        <div data-repeater-item="">
+
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              {{form_row(form.tipo)}}
+              <!--input type="text" class="form-control" id="name" placeholder="Name"-->
             </div>
-            <button data-repeater-create="" class="btn btn-info waves-effect waves-light">Add
-            </button>
-        {{form_end(form)}}
+            <div class="form-group col-md-3">
+              {{form_row(form.servicio)}}
+              <!--input type="text" class="form-control" id="name" placeholder="Name"-->
+            </div>
+            <div class="form-group col-md-3">
+              <!--input type="email" class="form-control" id="email" placeholder="Email"-->
+              {{form_row(form.costo)}}
+            </div>
+          </div>
+          <hr>
+        </div>
       </div>
+      <button data-repeater-create="" class="btn btn-success waves-effect waves-light">Agregar
+      </button>
+      {{form_end(form)}}
+    </div>
+  </div>
+</div>
 {% endblock %}
