--- a/src/AppBundle/Resources/views/Users/new.html.twig
+++ b/src/AppBundle/Resources/views/Users/new.html.twig
@@ -1,7 +1,20 @@
-{% extends "::base.html.twig" %}
-
-{% block title %}AppBundle:Users:new{% endblock %}
+{% extends "base.html.twig" %}
 
 {% block body %}
-<h1>Welcome to the Users:new page</h1>
+<div class="col-md-8 col-md-offset-2">
+	<div class="white-box">
+		<h3 class="font-bold">Crear usuario</h3>
+		<br>
+		{{form_start(form)}}
+		{{form_row(form.username)}}
+		{{form_row(form.name)}}
+		{{form_row(form.phone)}}
+		{{form_row(form.plainPassword)}}
+		<br>
+		<div class="text-center">
+			<button class="btn btn-primary">Crear</button>
+		</div>
+		{{form_end(form)}}
+	</div>
+</div>
 {% endblock %}
