--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,34 @@
 .ms-container{
 	width: auto !important;
 }
+
+.mt-3{
+	margin-top: 10px;
+}
+
+.mb-3{
+	margin-bottom: 10px;
+}
+
+.mb-2{
+	margin-bottom: 5px;
+}
+
+.mb-5{
+	margin-bottom: 25px;
+}
+
+.right{
+	float: right;
+}
+
+th{
+	text-align: center !important;
+}
+td{
+	text-align: center !important;
+}
+
+.ml-5{
+	margin-left: 15px;
+}
